// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TenFrame snapshot 10 av 10 (full) 1`] = `
<div>
  <svg
    aria-label="Ten-frame: 10 av 10"
    class="w-24 h-auto"
    role="img"
    viewBox="0 0 116 50"
  >
    <rect
      fill="white"
      height="48"
      rx="4"
      stroke="#78350f"
      stroke-width="1.5"
      width="114"
      x="1"
      y="1"
    />
    <g>
      <circle
        cx="14"
        cy="14"
        fill="#fbbf24"
        opacity="1"
        r="8"
        stroke="#78350f"
        stroke-width="1.5"
      />
    </g>
    <g>
      <circle
        cx="36"
        cy="14"
        fill="#fbbf24"
        opacity="1"
        r="8"
        stroke="#78350f"
        stroke-width="1.5"
      />
    </g>
    <g>
      <circle
        cx="58"
        cy="14"
        fill="#fbbf24"
        opacity="1"
        r="8"
        stroke="#78350f"
        stroke-width="1.5"
      />
    </g>
    <g>
      <circle
        cx="80"
        cy="14"
        fill="#fbbf24"
        opacity="1"
        r="8"
        stroke="#78350f"
        stroke-width="1.5"
      />
    </g>
    <g>
      <circle
        cx="102"
        cy="14"
        fill="#fbbf24"
        opacity="1"
        r="8"
        stroke="#78350f"
        stroke-width="1.5"
      />
    </g>
    <g>
      <circle
        cx="14"
        cy="36"
        fill="#fbbf24"
        opacity="1"
        r="8"
        stroke="#78350f"
        stroke-width="1.5"
      />
    </g>
    <g>
      <circle
        cx="36"
        cy="36"
        fill="#fbbf24"
        opacity="1"
        r="8"
        stroke="#78350f"
        stroke-width="1.5"
      />
    </g>
    <g>
      <circle
        cx="58"
        cy="36"
        fill="#fbbf24"
        opacity="1"
        r="8"
        stroke="#78350f"
        stroke-width="1.5"
      />
    </g>
    <g>
      <circle
        cx="80"
        cy="36"
        fill="#fbbf24"
        opacity="1"
        r="8"
        stroke="#78350f"
        stroke-width="1.5"
      />
    </g>
    <g>
      <circle
        cx="102"
        cy="36"
        fill="#fbbf24"
        opacity="1"
        r="8"
        stroke="#78350f"
        stroke-width="1.5"
      />
    </g>
  </svg>
</div>
`;

exports[`TenFrame snapshot 10 minus 3 (tiervenn-eksempel) 1`] = `
<div>
  <svg
    aria-label="Ten-frame: 7 av 10"
    class="w-24 h-auto"
    role="img"
    viewBox="0 0 116 50"
  >
    <rect
      fill="white"
      height="48"
      rx="4"
      stroke="#78350f"
      stroke-width="1.5"
      width="114"
      x="1"
      y="1"
    />
    <g>
      <circle
        cx="14"
        cy="14"
        fill="#fef3c7"
        opacity="0.5"
        r="8"
        stroke="#78350f"
        stroke-width="1.5"
      />
      <line
        stroke="#dc2626"
        stroke-width="2"
        x1="6"
        x2="22"
        y1="6"
        y2="22"
      />
    </g>
    <g>
      <circle
        cx="36"
        cy="14"
        fill="#fef3c7"
        opacity="0.5"
        r="8"
        stroke="#78350f"
        stroke-width="1.5"
      />
      <line
        stroke="#dc2626"
        stroke-width="2"
        x1="28"
        x2="44"
        y1="6"
        y2="22"
      />
    </g>
    <g>
      <circle
        cx="58"
        cy="14"
        fill="#fef3c7"
        opacity="0.5"
        r="8"
        stroke="#78350f"
        stroke-width="1.5"
      />
      <line
        stroke="#dc2626"
        stroke-width="2"
        x1="50"
        x2="66"
        y1="6"
        y2="22"
      />
    </g>
    <g>
      <circle
        cx="80"
        cy="14"
        fill="#fbbf24"
        opacity="1"
        r="8"
        stroke="#78350f"
        stroke-width="1.5"
      />
    </g>
    <g>
      <circle
        cx="102"
        cy="14"
        fill="#fbbf24"
        opacity="1"
        r="8"
        stroke="#78350f"
        stroke-width="1.5"
      />
    </g>
    <g>
      <circle
        cx="14"
        cy="36"
        fill="#fbbf24"
        opacity="1"
        r="8"
        stroke="#78350f"
        stroke-width="1.5"
      />
    </g>
    <g>
      <circle
        cx="36"
        cy="36"
        fill="#fbbf24"
        opacity="1"
        r="8"
        stroke="#78350f"
        stroke-width="1.5"
      />
    </g>
    <g>
      <circle
        cx="58"
        cy="36"
        fill="#fbbf24"
        opacity="1"
        r="8"
        stroke="#78350f"
        stroke-width="1.5"
      />
    </g>
    <g>
      <circle
        cx="80"
        cy="36"
        fill="#fbbf24"
        opacity="1"
        r="8"
        stroke="#78350f"
        stroke-width="1.5"
      />
    </g>
    <g>
      <circle
        cx="102"
        cy="36"
        fill="#fbbf24"
        opacity="1"
        r="8"
        stroke="#78350f"
        stroke-width="1.5"
      />
    </g>
  </svg>
</div>
`;
